<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/settings"
            android:title="@string/menu_slideshow" />
    </group>

    <item
        android:title="other">

        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@android:drawable/btn_dialog"
                android:title="Logout"></item>
        </menu>



    </item>
</menu>
