<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/con"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"


    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lightGray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/NameTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/TripName"
                android:textColor="#000000"
                android:textSize="24sp"
                android:padding="10sp"

                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="5dp"
            android:weightSum="4"
            >

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:gravity="center"
                android:text="@string/Date_Time"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAlignment="center"

                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/Date_Time"
                android:textColor="#000000"
                android:textSize="18sp"
                />


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/from"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/startLoction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/SLoctaion"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/to"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/endLoction"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="left"
                android:textStyle="bold"

                android:text="@string/Elocation"
                android:textColor="#000000"
                android:textSize="18sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tripStatus"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelled"

            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_to_show_notes"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"

            />



        <Button
            android:id="@+id/btnSartTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/Delete"
            android:textAllCaps="false"
            android:background="@color/lightRed"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>

