<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/registration"
        android:paddingVertical="35dp"
        android:gravity="center"
        android:textSize="60sp"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:background="@drawable/login_pic"
        android:layout_marginBottom="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="@string/email" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="@string/password"


        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/login_btn"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/toLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_has_an_account"
        android:layout_marginHorizontal="30dp"
        android:padding="10sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:clickable="true"

        android:focusable="true" />

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>